# noria

./: Cargo.toml
noria/: Cargo.toml
noria-benchmarks/: Cargo.toml
noria-benchmarks/piazza/: piazza.rs
noria-benchmarks/securecrp/: main.rs  test_populate.rs
noria-benchmarks/tpc_w/: tpc_w.rs
noria-benchmarks/vote/: main.rs  orchestrator.rs
noria-benchmarks/vote-migration/: main.rs
noria-benchmarks/vote/clients/localsoup/: mod.rs
noria-server/: Cargo.toml
noria-server/dataflow/: Cargo.toml
noria-server/dataflow/src/: payload.rs
noria-server/dataflow/src/backlog/: mod.rs  multiw_sr.rs
noria-server/dataflow/src/domain/: mod.rs
noria-server/dataflow/src/node/: mod.rs  process.rs
noria-server/dataflow/src/node/special/: base.rs  reader.rs
noria-server/dataflow/src/ops/: distinct.rs  topk.rs  union.rs
noria-server/dataflow/src/state/: memory_state.rs
noria-server/mir/src/: node.rs
noria-server/src/: builder.rs  handle.rs  integration.rs  lib.rs  startup.rs
noria-server/src/controller/: inner.rs  mir_to_flow.rs  mod.rs
noria-server/src/controller/migrate/: assignment.rs  mod.rs
noria-server/src/controller/migrate/materialization/: mod.rs  plan.rs
noria-server/src/controller/recipe/: mod.rs
noria-server/src/controller/sql/: mod.rs  query_graph.rs  security.rs
noria-server/src/controller/sql/mir/: mod.rs  security.rs
noria-server/src/controller/sql/passes/: alias_removal.rs
noria-server/src/worker/: readers.rs
noria/src/: data.rs  lib.rs  table.rs
noria/src/consensus/: zk.rs
